# Shunshi

./: .env.example  .gitignore  LICENSE.txt  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
.githooks/: pre-commit
app/: globals.css  layout.tsx  page.tsx
archive/: bazi_update.bundle
components/: ChatInterface.tsx
docs/: shunshi-comparison.md
engine/: README.md  SKILL.md  pyproject.toml
engine/celestial_computations/: __init__.py  __main__.py  aether.py  fengshui.py  harmon.py  hexagram_calculator.py  logos.py  praxis.py  shunshi.py
engine/skills/bazi-decision-making/: SKILL.md
engine/skills/bazi-decision-making/references/: cognitive_bias_mapping.md  element_heuristics.md
engine/skills/bazi-decision-making/scripts/: bazi_decision_engine.py
engine/skills/bazi-decision-making/templates/: decision_brief.yaml  yin_counterpoint.yaml
engine/skills/bazi-interpretation-intel/: SKILL.md
engine/skills/bazi-interpretation/bazi-bihourly-interpreter/: SKILL.md
engine/skills/bazi-mathematical-core/: SKILL.md
engine/skills/celestial-computations/: SKILL.md  UPDATE_REPORT.md  requirements.txt  verify_module.py
engine/skills/celestial-computations-subagent/: SKILL.md
engine/skills/celestial-computations/references/: day-pillar-bugfix.md
engine/skills/combine-bazi-report/: SKILL.md
scripts/: bazi_bihourly.py  bazi_bihourly_cn.py  bazi_calculator_generic.py  bazi_daily_24h_cn.py  bazi_daily_notion_upload.py  config_loader.py  kairos_daily_report.py  shichen_report.py  shunshi_notion_report.py  test-calendar-lib.js  (+1 more)
(+37 files in other folders)
